# ukda

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  MODEL_STACK.md  Makefile  README.md  docker-compose.yml  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  ruff.toml  start.sh  tsconfig.base.json  vitest.config.ts
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py
api/tests/: test_audit_routes.py  test_audit_service.py  test_auth.py  test_auth_config.py  test_bundle_verification.py  test_capacity_routes.py  test_capacity_service.py  test_documents_extraction.py  test_documents_governance_manifest_filters.py  test_documents_governance_routes.py  test_documents_redaction_phase5_rules.py  test_documents_redaction_routes.py  test_documents_routes.py  test_documents_service.py  test_documents_storage.py  test_entities_routes.py  test_evidence_ledger.py  test_export_hardening_regression.py  test_export_provenance.py  test_export_routes.py  test_exports_replay.py  test_exports_service.py  test_governance_integrity.py  test_indexes_routes.py  test_indexes_service.py  test_jobs_routes.py  test_launch_readiness_package_script.py  test_launch_routes.py  test_layout_contract.py  test_layout_job_pipeline.py  test_layout_segmentation_engine.py  test_layout_segmentation_gold_set.py  test_model_assignments_routes.py  test_model_stack.py  test_nonprod_seed_refresh_script.py  test_operations_readiness_service.py  test_operations_routes.py  (+26 more)
infra/: README.md
workers/: Dockerfile  README.md  pyproject.toml
(+3644 files in other folders)
